# RAG-Stack-Evaluator

./: .gitignore  NOTICE  README.md  pyproject.toml
example/: README.md  _offline_fixture.py  measured.py  metrics_override.py  quality.py  quality_metrics_override.py  quality_retrieval.py  quality_trace.py  trace_callback.py
rag_stack/static_rag_evaluator/: __init__.py  agentic_react.py  cache_paths.py  chunk_cache.py  dataset.py  embedding_cache.py  gen_fingerprint.py  node_line.py  static_rag_evaluator.py  strategy.py  support.py  trace_builder.py
rag_stack/static_rag_evaluator/chunk/: __init__.py  _registry.py  base.py  langchain_chunk.py  llama_index_chunk.py  utils.py
rag_stack/static_rag_evaluator/embedding/: base.py  data_parallel.py  vllm.py
rag_stack/static_rag_evaluator/evaluation/: generation.py  retrieval.py  retrieval_contents.py  util.py
rag_stack/static_rag_evaluator/evaluation/metric/: __init__.py  deepeval_metrics.py  generation.py  retrieval_contents.py  util.py
rag_stack/static_rag_evaluator/measured/: __init__.py  aux_process.py  cache.py  evaluator.py  performance_trace.py  provider.py  serving_runtime.py  vllm_deployment.py  vllm_env.py  vllm_pd_pair.py  vllm_subprocess.py
rag_stack/static_rag_evaluator/nodes/: util.py
rag_stack/static_rag_evaluator/nodes/generator/: base.py  llama_index_llm.py  openai_llm.py  registry.py  run.py  vllm.py  vllm_api.py
rag_stack/static_rag_evaluator/nodes/hybridretrieval/: base.py  hybrid_cc.py  hybrid_rrf.py  run.py
rag_stack/static_rag_evaluator/nodes/lexicalretrieval/: bm25.py  run.py
rag_stack/static_rag_evaluator/nodes/passageaugmenter/: __init__.py  base.py  prev_next_augmenter.py  run.py
rag_stack/static_rag_evaluator/nodes/passagecompressor/: __init__.py  base.py  llmlingua2.py  longllmlingua.py  refine.py  run.py  tree_summarize.py
rag_stack/static_rag_evaluator/nodes/passagefilter/: __init__.py  base.py  percentile_cutoff.py  recency.py  run.py  similarity_percentile_cutoff.py  similarity_threshold_cutoff.py  threshold_cutoff.py
rag_stack/static_rag_evaluator/nodes/passagereranker/: __init__.py  base.py  cohere.py  colbert.py  dp.py  flag_embedding.py  flag_embedding_llm.py  flashrank.py  jina.py  koreranker.py  mixedbreadai.py  monot5.py  nvidia.py  openvino.py  rankgpt.py  run.py  sentence_transformer.py  time_reranker.py  upr.py  voyageai.py
rag_stack/static_rag_evaluator/nodes/promptmaker/: base.py  chat_fstring.py  fstring.py  long_context_reorder.py  run.py  window_replacement.py
rag_stack/static_rag_evaluator/nodes/queryexpansion/: __init__.py  base.py  hyde.py  multi_query_expansion.py  run.py  (+1 more)
rag_stack/static_rag_evaluator/schema/: base.py  metricinput.py  module.py  node.py
rag_stack/static_rag_evaluator/utils/: __init__.py  cast.py  preprocess.py  util.py
rag_stack/static_rag_evaluator/vectordb/: __init__.py  _faiss_cache.py  _faiss_threads.py  base.py  chroma.py  couchbase.py  faiss_hnsw.py  faiss_ivf.py  milvus.py  pinecone.py  qdrant.py  weaviate.py
rag_stack/vllm_instrumentation/: __init__.py
rag_stack/vllm_instrumentation/calibration/: runtime_identity.py
rag_stack/vllm_instrumentation/llm_sim/: __init__.py
rag_stack/vllm_instrumentation/serving_curves/: __init__.py
rag_stack_evaluator/: __init__.py  cuda_toolkit.py  vllm_env.py  vllm_launcher.py
rag_stack_evaluator/static_rag_evaluator/: __init__.py  agentic_react.py  cache_paths.py  chunk_cache.py  dataset.py  embedding_cache.py  engine_slot.py  gen_fingerprint.py  node_line.py  recording.py  static_rag_evaluator.py  strategy.py  support.py
rag_stack_evaluator/static_rag_evaluator/chunk/: __init__.py  _registry.py  base.py  langchain_chunk.py  llama_index_chunk.py
rag_stack_evaluator/static_rag_evaluator/embedding/: base.py  data_parallel.py  vllm.py
rag_stack_evaluator/static_rag_evaluator/evaluation/: generation.py  retrieval.py  retrieval_contents.py  util.py
rag_stack_evaluator/static_rag_evaluator/measured/: __init__.py  artifact_contract.py  aux_process.py  cache.py  evaluator.py  gpu_mem.py  performance.py  performance_trace.py  provider.py  serving_runtime.py  vllm_deployment.py  vllm_env.py  vllm_pd_pair.py  vllm_subprocess.py
rag_stack_evaluator/static_rag_evaluator/nodes/: util.py
rag_stack_evaluator/static_rag_evaluator/schema/: base.py  metricinput.py  module.py  node.py
rag_stack_evaluator/static_rag_evaluator/utils/: data_parallel.py  preprocess.py
rag_stack_evaluator/static_rag_evaluator/vectordb/: __init__.py  base.py  chroma.py  couchbase.py  faiss_hnsw.py  faiss_ivf.py  milvus.py  pinecone.py  qdrant.py  weaviate.py
rag_stack_evaluator/vllm_instrumentation/calibration/: __init__.py
scripts/: check_vllm_judge_server.py  start_vllm_judge_server.sh  vllm_multimodel_gateway.py
tests/: aux_process_fixtures.py  test_agentic_react_reranker.py  test_aux_model_data_parallel.py  test_aux_process_ipc.py  test_cache_paths.py  test_chunk_cache_init_reuse.py  test_colbert_streaming_embedding.py  test_corpus_activation_cache.py  test_deepeval_partial_results.py  test_engine_probe_stats.py  test_engine_slot.py  test_faiss_cache_lock.py  test_faiss_ivf.py  test_faiss_read_only_mmap.py  test_fetch_lookup_stampede.py  test_gen_fingerprint.py  test_measured_continuous_stage_fastpath.py  test_measured_evaluator_parallelism_gate.py  test_measured_llm_admission.py  test_measured_performance_trace.py  test_measured_scoring_isolation.py  test_measured_stage_executor_lifecycle.py  test_measured_stage_service_contract.py  test_measured_vllm_pd_admission.py  test_mem_scheduler.py  test_public_import_order.py  test_rag_quality_evaluator_vectordb_path.py  test_react_generator_dispatch.py  test_recording_selection.py  test_semantic_retrieval_embedding_dp.py  test_static_gt_empty_answer_quality.py  test_vllm_api_multimodel.py  test_vllm_env.py  test_vllm_frontend_boundary.py  test_vllm_multimodel_gateway.py  test_vllm_pd_calibration_launch.py  test_vllm_stage_telemetry.py  test_vllm_startup_retry.py  test_vllm_timing_dispatch.py  test_weight_floor_util.py
(+96 files in other folders)
